added scss to webpaack

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>React Boilerplate</title>
+        <title>Micharski Courses</title>
     </head>
     
     <body>
